--- a/src/HAX506X_Probabilites/tds/td_main.tex
+++ b/src/HAX506X_Probabilites/tds/td_main.tex
@@ -79,10 +79,19 @@
     \input{../tds/td_9.tex}
 
     \newpage
-    \section*{TD10 --- Convergence en loi}\label{sec:TD9}
+    \section*{TD10 --- Convergence en loi}\label{sec:TD10}
     \addcontentsline{toc}{section}{\nameref{sec:TD10}}
     \setcounter{section}{10}
     \setcounter{tdcounter}{0}
     \input{../tds/td_10.tex}
+
+    \newpage
+    \section*{TD11 --- Différents modes de convergence et théorème central limite}\label{sec:TD11}
+    \addcontentsline{toc}{section}{\nameref{sec:TD11}}
+    \setcounter{section}{11}
+    \setcounter{tdcounter}{0}
+    \input{../tds/td_11.tex}
+
+    
 
 \end{document}
