--- a/active_semester/src/HAX601X_Topologie/assets/module_header.tex
+++ b/active_semester/src/HAX601X_Topologie/assets/module_header.tex
@@ -9,28 +9,8 @@
 \dottedcontents{subsubsection}[12.0em]{}{3.8em}{1pc}  % Was 10.0em, now 12.0em
 
 %--------------------------------------------------------------------------------
-\newcommand{\cv}{\longrightarrow}
-\newcommand{\cvn}{\underset{n\to\infty}{\cv}}
-\newcommand{\cvps}{{\overset{\text{p.s.}}{\longrightarrow}}}
-\newcommand{\cvpsn}{\underset{n\to\infty}{\cvps}}
-\newcommand{\cvp}{{\overset{\mathbb{P}}{\longrightarrow}}}
-\newcommand{\cvpn}{\underset{n\to\infty}{\cvp}}
-\newcommand{\cvlp}{{\overset{\mathcal{L}^{p}}{\longrightarrow}}}
-\newcommand{\cvlpn}{\underset{n\to\infty}{\cvlp}}
-\newcommand{\cvd}{{\overset{(\mathcal{D})}{\longrightarrow}}}
-\newcommand{\cvdn}{\underset{n\to\infty}{\cvd}}
-\newcommand{\cvlaw}{{\overset{(\mathscr{L})}{\longrightarrow}}}
-\newcommand{\cvlawn}{\underset{n\to\infty}{\cvlaw}}
-\newcommand{\iid}{\text{i.i.d.}}
 
-
-
-
-\DeclareMathOperator{\GLn}{\mathsf{GL_{n}}} % Real spectrum
-\newcommand{\act}{\lcirclearrowright} % Action symbol
-\DeclareMathOperator{\stab}{\mathsf{st}} % Stabilizer
-
-
+\newcommand{\abs}[1]{\left\lvert#1\right\rvert} % Absolute value
 %--------------------------------------------------------------------------------
 % Custom Per Subject Theorems
 %--------------------------------------------------------------------------------
@@ -45,6 +25,7 @@
 \mytheorem{notation}{Notation}{verdant}{}{}
 \mytheorem{example}{Exemple}{matrix-mist}{}{}
 \mytheorem{exo}{Exercice}{matrix-mist}{}{}
+\mytheorem{exercice}{Exercice}{matrix-mist}{}{}
 \mytheorem{theorem}{Théorème}{astral}{}{}
 
 \makeatother
